; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_atari_scsi.c_SCSI_DMA_SETADR.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_atari_scsi.c_SCSI_DMA_SETADR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8, i8, i8 }

@st_dma = common dso_local global %struct.TYPE_2__ zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @SCSI_DMA_SETADR to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SCSI_DMA_SETADR(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = trunc i64 %3 to i8
  store i8 %4, i8* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @st_dma, i32 0, i32 0), align 1
  %5 = call i32 (...) @MFPDELAY()
  %6 = load i64, i64* %2, align 8
  %7 = lshr i64 %6, 8
  store i64 %7, i64* %2, align 8
  %8 = load i64, i64* %2, align 8
  %9 = trunc i64 %8 to i8
  store i8 %9, i8* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @st_dma, i32 0, i32 1), align 1
  %10 = call i32 (...) @MFPDELAY()
  %11 = load i64, i64* %2, align 8
  %12 = lshr i64 %11, 8
  store i64 %12, i64* %2, align 8
  %13 = load i64, i64* %2, align 8
  %14 = trunc i64 %13 to i8
  store i8 %14, i8* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @st_dma, i32 0, i32 2), align 1
  %15 = call i32 (...) @MFPDELAY()
  ret void
}

declare dso_local i32 @MFPDELAY(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
